[package]
name = "playground"
version = "0.1.0"
authors = ["Harikrishnan M <hari@dmartlabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger ="0.9.0"
log="0.4.14"
dotenv = "0.15.0"
actix-web = "3.3.2"
actix-web-validator = "2.1.1"
actix-service = "1.0.6"
actix-http = "2.2.1"
futures = "0.3.17"
